# ScatTR

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
example/: README.md  run.sh
example/input/: catalog.tsv  reference.fa  reference.fa.fai  sample.bam  sample.bam.bai
example/output/: sample.bag.bam  sample.defs.json  sample.genotypes.json  sample.stats.json
example/scripts/: make_genome.py  make_inputs.sh
src/: alignment.rs  catalog.rs  cli.rs  constants.rs  extract.rs  genotype.rs  lib.rs  main.rs  observers.rs  positions.rs  records.rs  reference.rs  sa.rs  sequence.rs  util.rs
src/commands/: align.rs  define.rs  extract.rs  genotype.rs  mod.rs  stats.rs
src/distributions/: expected.rs  mod.rs
