[package]
name = "scattr"
version = "0.1.2"
edition = "2021"
description = "A tool for estimating the copy number of large tandem repeats"
repository = "https://github.com/rashidalabri/scattr"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
