[package]
name = "scattr"
version = "0.2.0"
edition = "2021"
description = "A tool for estimating the copy number of large tandem repeats"
repository = "https://github.com/rashidalabri/scattr"
license = "MIT OR Apache-2.0"
keywords = ["genomics", "genotyping", "bioinformatics", "biology"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.80"
argmin = { version = "0.10.0", features = ["serde1", "rayon"] }
argmin-math = "0.4.0"
argmin-observer-paramwriter = "0.1.0"
argmin-observer-slog = "0.1.0"
bio = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
exitcode = "1.1.2"
indexmap = "2.2.3"
log = "0.4.20"
ndarray = "0.15.6"
ndarray-ndimage = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_xoshiro = "0.6.0"
rayon = "1.8.1"
rust-htslib = "0.46.0"
serde = "1.0.197"
serde_json = "1.0.114"
slog = "2.7.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
statrs = "0.17.1"